--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi==0.115.12
-uvicorn==0.34.2
-yfinance==0.2.40
-python-multipart==0.0.9
-flask==2.3.3
+fastapi==0.104.1
+uvicorn==0.24.0
 python-multipart==0.0.6
+yfinance==0.2.31
+numpy==1.24.3
